edits to _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Mouse Mousekewitz
-description: This is Mouse Mousekewitz' homepage.
+title: Actual Person
+description: This is a homepage done for a Final Assigment in course KIK-LG219. Actual Person is not actually a person. 
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
